part-1/daily-images/manifests/service-pong.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-gen-svc
spec:
  type: ClusterIP
  selector:
    app: two-container
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
