part-1/daily-images/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
   - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: image-gen-svc
            port:
              number: 80
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-fetch-svc
            port:
              number: 80
